[package]
name = "tweet2wx"
version = "0.1.0"
edition = "2021"
description = "Convert X/Twitter posts to WeChat Official Account articles"
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# HTML escaping & template
html-escape = "0.2"

# Error handling
anyhow = "1"

# Base64 encoding (for image embedding)
base64 = "0.22"

# Async stream utilities
futures = "0.3"

# Environment / config
dirs = "5"
toml = "0.8"